[package]
name = "brs"
version = "0.2.0"
authors = ["ns <portification@gmail.com>"]
edition = "2018"
description = "Read and write Brickadia save files."
readme = "README.md"
keywords = ["brickadia", "parser", "file", "binary"]
categories = ["encoding"]
license = "MIT"

[dependencies]
byteorder = "1.3.4"
libflate = "1.0.0"
uuid = "0.8.1"
chrono = "0.4.11"
num_enum = "0.4.3"
