[package]
name = "brs"
version = "0.2.0"
authors = ["ns <portification@gmail.com>"]
edition = "2018"
description = "Read and write Brickadia save files."
readme = "README.md"
keywords = ["brickadia", "parser", "file", "binary"]
categories = ["encoding"]
license = "MIT"

[dependencies]
byteorder = "1.3.4"
flate2 = { version = "1.0.19", features = ["zlib-ng-compat"], default-features = false }
uuid = "0.8.1"
chrono = "0.4.19"
num_enum = "0.5.1"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "main"
harness = false
